--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
     "@react-navigation/material-bottom-tabs": "^6.2.16",
     "@react-navigation/native": "^6.1.7",
     "expo": "~48.0.18",
+    "expo-font": "~11.1.1",
+    "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^10.1.0",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "^4.7.1",
-    "react-native-screens": "^3.22.1",
-    "expo-font": "~11.1.1",
-    "expo-image-picker": "~14.1.1"
+    "react-native-screens": "^3.22.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
